Fixed preview grid overflow bug

--- a/src/pages/Booking.css
+++ b/src/pages/Booking.css
@@ -186,20 +186,32 @@ input[type="file"] {
   font-size: 48px;
 }
 
-.add-references {
+.reference-list {
   display: grid;
-  cursor: pointer;
   grid-template-columns: repeat(3, minmax(100px, 1fr));
-  grid-template-rows: 110px;
   gap: 10px;
-  padding-bottom: 30px;
+  height: 200px;
 }
 
-.add-references .upload-icon {
+.reference-list label {
+  margin-bottom: 0;
+}
+
+.reference-list img {
+  display: block;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.upload-icon {
   font-size: 28px;
 }
 
 .add-image-btn {
+  height: 100%;
+  cursor: pointer;
   border: 1px dashed #535353;
   border-radius: 8px;
   display: flex;
